# ouroboros-desktop

./: .gitignore  README.md  VERSION  build.sh  build_windows.ps1  pyproject.toml  requirements.txt  server.py
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  CHECKLISTS.md  DEVELOPMENT.md
ouroboros/: config.py  extension_loader.py  extensions_api.py  llm.py  marketplace_api.py  model_catalog_api.py  responses_executor.py  responses_files.py  responses_server.py  responses_session_store.py  responses_translator.py  server_control.py  skill_loader.py  utils.py
ouroboros/contracts/: __init__.py  openresponses_schema.py  plugin_api.py  skill_manifest.py
ouroboros/marketplace/: clawhub.py
ouroboros/tools/: git.py  registry.py  release_sync.py  skill_exec.py
skills/weather/: SKILL.md  plugin.py
supervisor/: message_bus.py  workers.py
tests/: test_build_repo_bundle.py  test_build_scripts.py  test_cache_optimization.py  test_chat_logs_ui.py  test_contracts.py  test_extension_loader.py  test_extensions_api.py  test_git_ops_recovery.py  test_launcher_sync.py  test_marketplace_clawhub.py  test_model_catalog_api.py  test_provider_integration.py  test_release_sync.py  test_release_workflow.py  test_responses_gateway.py  test_restart_reconnect.py  test_runtime_mode_gating.py  test_settings_ui_guards.py  test_skill_exec.py  test_skill_loader.py  test_tool_policy.py
web/: settings.css  style.css
web/modules/: chat.js  evolution.js  marketplace.js  settings.js  settings_controls.js  settings_ui.js  skills.js
